
[package]
name = "faillog"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
once_cell = "1"
futures = "0.3"
indicatif = "0.18.0"
log = "0.4.28"
env_logger = "0.11.8"
serde_json = "1.0.145"
